--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -1,7 +1,7 @@
 {{ template "header.html" }}
 <div class="container">
   <h3>Here is the decrypted message:</h3>
-  <p style="white-space: pre-wrap">{{.DecryptedMessage}}</p>
+  <p style="white-space: pre-wrap">{{if not .DecryptedMessage}} Passphrase is required!! </p>
 
   <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -15,7 +15,7 @@
         <form id="loginForm" method="POST"> <!-- form with an ID so we can identify it, now includes both the textbox and the button within it -->
         <div class="modal-body">
             <div class="form-group">
-              <label for="passphrase" class="col-form-label">Last Name:</label>
+              <label for="passphrase" class="col-form-label">Last Name/Passphrase:</label>
               <input type="password" name="passphrase" class="form-control" id="passphrase">
             </div>
         </div>
@@ -27,6 +27,7 @@
       </div>
     </div>
   </div>
+  
 <script>
   $(document).ready(function(e) {
   $('#loginModal').modal('show');
@@ -34,5 +35,8 @@
 
 });
 </script>
+{{else}}
+<p>{{.DecryptedMessage}} </p>
+{{end}}
 </body>
 </html>
