--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -55,8 +55,8 @@
             </div>
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="other_lastname" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify they're allowed to access it"  >Their lastname/Passphrase </label>
-                    <input id="other_lastname" class="form-control" type="text" name="other_lastname" placeholder="Please enter their lastname*" required="required" data-error="Valid last is required.">
+                    <label for="other_lastname" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify they're allowed to access it"  >Their lastname/Passphrase (Not Required): </label>
+                    <input id="other_lastname" class="form-control" type="text" name="other_lastname" placeholder="Please enter their lastname or a passphrase" data-error="Valid last is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
