--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -15,7 +15,7 @@
         <form id="loginForm" method="POST"> <!-- form with an ID so we can identify it, now includes both the textbox and the button within it -->
         <div class="modal-body">
             <div class="form-group">
-              <label for="passphrase" class="col-form-label">Last Name/Passphrase:</label>
+              <label for="passphrase" class="col-form-label" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify you're allowed to access it, it's possible to be empty" >Last Name/Passphrase:</label>
               <input type="password" name="passphrase" class="form-control" id="passphrase">
             </div>
         </div>
