--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -2,7 +2,7 @@
 <div class="container">
   <h3>Here is the decrypted message:</h3>
   <p style="white-space: pre-wrap">{{if not .DecryptedMessage}} Passphrase is required!! </p>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
     ReEnter Passphrase
   </button>
 
@@ -16,14 +16,14 @@
                 </button>
         </div>
         <form id="loginForm" method="POST"> <!-- form with an ID so we can identify it, now includes both the textbox and the button within it -->
-        <div class="modal-body">
+        <div class="modal-body"> 
             <div class="form-group">
-              <label for="passphrase" class="col-form-label" class="info" data-bs-toggle="tooltip" title="This is used as a passphrase to verify you're allowed to access it, it's possible to be empty" >Last Name/Passphrase:</label>
+              <label for="passphrase" class="col-form-label"><a href="#" data-bs-toggle="tooltip" title="This is used as a passphrase to verify you're allowed to access it, it's possible to be empty" >Last Name/Passphrase: </a></label>
               <input type="password" name="passphrase" class="form-control" id="passphrase">
             </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
           <button type="submit" class="btn btn-primary">Login</button>
         </div>
         </form>
