--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -11,7 +11,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="loginModalLabel">View Decrypted Message</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
         </div>
@@ -35,7 +35,8 @@
   $(document).ready(function(e) {
   $('#loginModal').modal('show');
   //handle the form's "submit" events
-
+  const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
 });
 </script>
 {{else}}
