--- a/app/templates/decryption.html
+++ b/app/templates/decryption.html
@@ -15,10 +15,10 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
         </div>
-        <form id="loginForm" method="POST"> <!-- form with an ID so we can identify it, now includes both the textbox and the button within it -->
+        <form id="loginForm" method="POST">
         <div class="modal-body"> 
             <div class="form-group">
-              <label for="passphrase" class="col-form-label"><a href="#" data-bs-toggle="tooltip" title="This is used as a passphrase to verify you're allowed to access it, it's possible to be empty" >Last Name/Passphrase: </a></label>
+              <label for="passphrase" class="col-form-label"><a href="#" data-bs-toggle="tooltip" title="This is used as a passphrase to verify you're allowed to access it, it's possible to be empty" >Your Last Name/Passphrase: </a></label>
               <input type="password" name="passphrase" class="form-control" id="passphrase">
             </div>
         </div>
