--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -73,7 +73,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <label for="turingtest"  class=" hidewhenchecked"> <a href="#" data-bs-toggle="tooltip" title="This is used to prevent spam emails, not required if self distributing">Which Color is the sky: blue, green or red? * </a></label>
-                <input type="text" class="hidewhenchecked form-control" name="color" required="required" pattern="[ ]*(red|blue|orange|green)[ ]*" title="Pick the fluffiest animal"/>
+                <input type="text" class="hidewhenchecked form-control" name="color" id="color" required="required" pattern="[ ]*(red|blue|orange|green)[ ]*" title="Pick the fluffiest animal"/>
         </div>
         <div class="col-sm-6 my-auto">
             <div class="form-check form-switch">
@@ -85,7 +85,6 @@
        <div class="row">
             <div class="col-sm-6">
                 <input id="file-to-upload" type="file" name="">
-                <div id="chunk-information">
             </div>
        </div>
         <div class="row">
@@ -149,8 +148,6 @@ $(document).ready(function(e) {
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
 
-  <!-- Load React. -->
-  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
   <script type="text/javascript" src="assets/fileupload.js" ></script>
 </body>
 </html>
