--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -106,10 +106,14 @@
             <div id="success"></div>
                         <div class="row">
                             <div class=" form-group col-xs-12">
-                                <input type="submit" class="btn btn-success btn-send" value="Send message">
+                                <input id="submitButton" type="submit" class="btn btn-success btn-send" value="Send message">
                                 <div id="wasitasuccess"> </div>
 
                             </div>
+                          <button class="btn btn-primary" id="loading-bar" type="button" style="display:none;" disabled>
+  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+  Uploading...
+</button>
                           </div>
                         </div>
         <div class="row">
@@ -149,6 +153,6 @@ $(document).ready(function(e) {
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
 
-  <script type="text/javascript" src="assets/fileupload.js" ></script>
+  <script type="text/javascript" src="assets/fileupload2.js" ></script>
 </body>
 </html>
