--- a/app/templates/assets/common.css
+++ b/app/templates/assets/common.css
@@ -35,9 +35,16 @@
 }
 
 /* Ensure form elements are interactive */
-.container-main * {
+.container-main > *, 
+.container-main .section-group *,
+.container-main .form-group * {
     position: relative;
     z-index: 1;
+}
+
+/* Exclude modals from container positioning */
+.modal, .modal * {
+    position: initial !important;
 }
 
 .form-control, .btn, .form-check-input {
